Fix overflow in card and position bottom icon in middle

--- a/_sass/catalog.scss
+++ b/_sass/catalog.scss
@@ -280,14 +280,19 @@ p {
   color: var(--color-secondary-light);
   font-weight: 1400;
   font-style: bold;
+  width: calc(80%);
+  margin: auto;
+  overflow: hidden;
+  white-space: nowrap;
   text-overflow: ellipsis;
   text-align: center;
-  padding: 15px 0 3px 0;
+  padding: 15px 0 15px 0;
 }
 .pattern-id {
   position: absolute;
   bottom: 0;
   right: 0;
+  left: 0;
   margin-right: 14px;  
   color: var(--color-secondary-light);
   margin: 0 3px 3px 0;
